# oct-ai-service

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_PROBLEM_REPORT.md  DELIVERABLE_PACKAGE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GEMINI_TEST_REPORT.md  OCT_PoC_Workflow.json  OPEN_WEBUI_CONNECTION_GUIDE.md  README.md  WECHAT_INTEGRATION_GUIDE.md  WECOM_INTEGRATION_RESEARCH.md  api_stress_test.py  api_stress_test_report_20250730_013000.md  batch_city_test.py  business_knowledge_tool.py  comprehensive_api_test.py  comprehensive_api_test_report_20250729_230946.md  create_excel_report.py  debug_streaming.py  docker-compose.yml  electricity_price_tool.py  fuzzy_query_bug_fixes_test_report.md  fuzzy_query_pressure_test_report.md  guangzhou_commercial_test.txt  guangzhou_tianhe_commercial_test.txt  industrial_commercial_price_coverage_report_1753774303.md  industrial_commercial_price_coverage_report_1753776086.md  litellm_config.yaml  main.py  main_router_agent.py  migrate_to_supabase.py  oct_database_agent.py  oct_database_agent_supabase.py  photovoltaic_capacity_tool.py  poc_extraction_report.xlsx  policy_query_tool.py  power_generation_duration_tool.py  pyproject.toml  (+21 more)
api/: index.py  main.py  oct_database_agent_supabase.py  requirements.txt
knowledge_base/: raspberry_pi_guide.md  sample_arduino_guide.md
